media queries for content, navbar with display:none, and column adjustment for extra small screens

--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html lang="en">
 
 <head>
-    <title>Basic Portfolio</title>
+    <title>Responsive Portfolio</title>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="assets/css/reset.css" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet">
+    </body>
+
+</html>
 </head>
 
 <body>
