--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,7 @@
 <head>
     <title>Portfolio</title>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="assets/css/reset.css" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet">
 </head>
