navbar contact fix

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="navContent">
             <ul>
                 <li class="logo">Kelsey Beffel</li>
-                <li><a href="Contact.html" class="withoutRightBorder">Contact</a></li>
+                <li><a href="contact.html" class="withoutRightBorder">Contact</a></li>
                 <li><a href="portfolio.html" class="withRightBorder">Portfolio</a></li>
                 <li><a href="index.html" class="withRightBorder">About</a></li>
             </ul>
