--- a/index.html
+++ b/index.html
@@ -127,44 +127,44 @@
             <ul class="meals-showcase clearfix">
                 <li>
                     <figure class="meal-photo">
-                        <img src="resources/img/1.jpg" alt="Korean bibimbap with egg and vegetables">
+                        <img src="resources/img/tile1.jpg" alt="Korean bibimbap with egg and vegetables">
                     </figure>
                 </li>
                 <li>
                     <figure class="meal-photo">
-                        <img src="resources/img/2.jpg" alt="Simple italian pizza with cherry tomatoes">
+                        <img src="resources/img/tile2.jpg" alt="Simple italian pizza with cherry tomatoes">
                     </figure>
                 </li>
                 <li>
                     <figure class="meal-photo">
-                        <img src="resources/img/3.jpg" alt="Chicken breast steak with vegetables">
+                        <img src="resources/img/tile3.jpg" alt="Chicken breast steak with vegetables">
                     </figure>
                 </li>
                 <li>
                     <figure class="meal-photo">
-                        <img src="resources/img/4.jpg" alt="Autumn pumpkin soup">
+                        <img src="resources/img/tile4.jpg" alt="Autumn pumpkin soup">
                     </figure>
                 </li>
             </ul>
             <ul class="meals-showcase clearfix">
                 <li>
                     <figure class="meal-photo">
-                        <img src="resources/img/JS_lesson1.png" alt="Paleo beef steak with vegetables">
+                        <img src="resources/img/tile5.jpg" alt="Paleo beef steak with vegetables">
                     </figure>
                 </li>
                 <li>
                     <figure class="meal-photo">
-                        <img src="resources/img/6.jpg" alt="Healthy baguette with egg and vegetables">
+                        <img src="resources/img/tile6.jpg" alt="Healthy baguette with egg and vegetables">
                     </figure>
                 </li>
                 <li>
                     <figure class="meal-photo">
-                        <img src="resources/img/7.jpg" alt="Burger with cheddar and bacon">
+                        <img src="resources/img/tile7.jpg" alt="Burger with cheddar and bacon">
                     </figure>
                 </li>
                 <li>
                     <figure class="meal-photo">
-                        <img src="resources/img/8.jpg" alt="Granola with cherries and strawberries">
+                        <img src="resources/img/tile8.jpg" alt="Granola with cherries and strawberries">
                     </figure>
                 </li>
             </ul>
