hnagman pic update

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                     </div>
                 </div>
                 <div class="col span-1-of-4 box">
-                    <img src="resources/img/hangman-game.png" alt="hangman" id="hangman-icon">
+                    <img src="resources/img/hangman-game.png" alt="hangman">
                     <h3>Fun Hangman Game Built With JavaScript</h3>
                     <div class="city-feature">
                         <i class="ion-social-github icon-small"></i>
