--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </nav>
         <div class="hero-text-box">
             <h1>Welcome to<br> Kelsey Beffel's Portfolio Page.</h1>
-            <a class="btn btn-full js--scroll-to-plans" href="#">I'm interested!</a>
+            <!-- <a class="btn btn-full js--scroll-to-plans" href="#">I'm interested!</a> -->
             <a class="btn btn-ghost js--scroll-to-start" href="#">Show me more</a>
         </div>
 
