display app mockup for where does it go

--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
         </section>
 
 
-        <!-- <section class="section-steps" id="works">
+       <section class="section-steps" id="works">
             <div class="row">
-                <h2>How it works &mdash; Simple as 1, 2, 3</h2>
+                <h2>Where Does It Go?</h2>
             </div>
             <div class="row">
                 <div class="col span-1-of-2 steps-box">
@@ -148,23 +148,23 @@
                 </div>
                 <div class="col span-1-of-2 steps-box">
                     <div class="works-step clearfix">
-                        <div>1</div>
-                        <p>Choose the subscription plan that best fits your needs and sign up today.</p>
+                        <div>--</div>
+                        <p>Seattle Utilities Page</p>
                     </div>
                     <div class="works-step clearfix">
-                        <div>2</div>
-                        <p>Schedule a session using calendly!</p>
+                        <div>--</div>
+                        <p>Recycle, Compost, Trash</p>
                     </div>
                     <div class="works-step clearfix">
-                        <div>3</div>
-                        <p>Let us begin our journey!!</p>
+                        <div>--</div>
+                        <p>City of Seattle</p>
                     </div>
 
                     <a href="#" class="btn-app"><img src="resources/img/download-app.svg" alt="App Store Button"></a>
                     <a href="#" class="btn-app"><img src="resources/img/download-app-android.png" alt="Play Store Button"></a>
                 </div>
             </div>
-        </section> -->
+        </section>
 
         <section class="section-cities" id="cities">
             <div class="row">
