--- a/index.html
+++ b/index.html
@@ -51,10 +51,9 @@
                 <!-- <img src="resources/img/seif.png" alt="Omnifood logo" class="logo"> -->
                 <!-- <img src="resources/img/logo.png" alt="Omnifood logo" class="logo-black"> -->
                 <ul class="main-nav js--main-nav">
-                    <li><a href="#features">Portfolio</a></li>
-                    <li><a href="#works">About Me</a></li>
-                    <li><a href="#cities">My Work</a></li>
-                    <li><a href="#plans">Reach Out!</a></li>
+                    <li><a href="#aboutMe">About Me</a></li>
+                    <li><a href="#works">My Work</a></li>
+                    <li><a href="#contact">Reach Out!</a></li>
                 </ul>
                 <a class="mobile-nav-icon js--nav-icon"><i class="ion-navicon-round"></i></a>
             </div>
@@ -67,7 +66,7 @@
 
     </header>
 
-    <section class="section-features js--section-features" id="features">
+    <section class="section-features js--section-features" id="aboutMe">
         <div class="row">
             <h2>A little about me...</h2>
             <p class="long-copy">
@@ -336,7 +335,7 @@
             </div>
         </section> -->
 
-        <section class="section-form">
+        <section class="section-form" id ="contact">
             <div class="row">
                 <h2>I'd love to hear from you</h2>
             </div>
