add friend finder project to portfolio

--- a/index.html
+++ b/index.html
@@ -236,11 +236,11 @@
                     </div>
                 </div>
                 <div class="col span-1-of-4 box">
-                    <img src="resources/img/san-francisco.jpg" alt="placeholder">
-                    <h3>Placeholder For next Project - Will add in future</h3>
+                    <img src="resources/img/friend-finder.png" alt="placeholder">
+                    <h3>Find New Friends using this full-stack Application</h3>
                     <div class="city-feature">
-                        <i class="ion-social-github icon-small"></i>
-                        <a href="https://github.com/kbefff/Riverdale_Trivia_Game">Placeholder</a>
+                        <i class="ion-social-heroku icon-small"></i>
+                        <a href="https://serene-plains-59796.herokuapp.com/">FriendFinder</a>
                     </div>
                 </div>
             </div>
