hide where does it go

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 </li>
             </ul>
         </section>
-
+<!-- 
 
         <section class="section-steps" id="works">
             <div class="row">
@@ -163,7 +163,7 @@
                     <a href="#" class="btn-app"><img src="resources/img/download-app-android.png" alt="Play Store Button"></a>
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <section class="section-cities" id="cities">
             <div class="row">
