more room for new projects

--- a/index.html
+++ b/index.html
@@ -244,6 +244,7 @@
                     </div>
                 </div>
             </div>
+            
             <!-- <div class="row">
                 <div class="col span-1-of-3">
                     <blockquote>
@@ -266,7 +267,46 @@
             </div>
         </section>
 
+        <section class="section-cities" id="cities">
+            <div class="row">
+                <!-- <h2>What I've worked on thus far</h2> -->
+            </div>
+            <div class="row js--wp-3">
+                <div class="col span-1-of-4 box">
+                    <img src="resources/img/hopon.png" alt="hop-on-landing-page">
+                    <h3>Front-End Brewery Discovery App</h3>
+                    <div class="city-feature">
+                        <i class="ion-social-github icon-small"></i>
+                        <a href="https://github.com/kbefff/HopOn">HopOn!</a>
+                    </div>
+                </div>
+                <div class="col span-1-of-4 box">
+                    <img src="resources/img/hangman-game.png" alt="hangman">
+                    <h3>Fun Hangman Game Built With JavaScript</h3>
+                    <div class="city-feature">
+                        <i class="ion-social-github icon-small"></i>
+                        <a href="https://github.com/kbefff/Hangman">Hangman</a>
+                    </div>
+                </div>
+                <div class="col span-1-of-4 box">
+                    <img src="resources/img/crystal-game.png" alt="crystal" id="crystal-icon">
+                    <h3>Dynamic use of jQuery to Build Crystal Game</h3>
+                    <div class="city-feature">
+                        <i class="ion-social-github icon-small"></i>
+                        <a href="https://github.com/kbefff/Crystal-Game">Crystal Game</a>
+                    </div>
+                </div>
+                <div class="col span-1-of-4 box">
+                    <img src="resources/img/riverdale-trivia-game.png" alt="riverdale-landing-page">
+                    <h3>Trivia App Based on the Popular Television Show Riverdale</h3>
+                    <div class="city-feature">
+                        <i class="ion-social-github icon-small"></i>
+                        <a href="https://github.com/kbefff/Riverdale_Trivia_Game">Riverdale Trivia Game</a>
+                    </div>
+                </div>
+            </div>
 
+        </section>
         <!-- <section class="section-plans js--section-plans" id="plans">
             <div class="row">
                 <h2>Start Today!</h2>
