--- a/index.html
+++ b/index.html
@@ -274,34 +274,34 @@
             <div class="row js--wp-3">
                 <div class="col span-1-of-4 box">
                     <img src="resources/img/hopon.png" alt="hop-on-landing-page">
-                    <h3>Front-End Brewery Discovery App</h3>
+                    <h3>Placeholder</h3>
                     <div class="city-feature">
                         <i class="ion-social-github icon-small"></i>
-                        <a href="https://github.com/kbefff/HopOn">HopOn!</a>
+                        <a href="https://github.com/kbefff/HopOn">Placeholder</a>
                     </div>
                 </div>
                 <div class="col span-1-of-4 box">
                     <img src="resources/img/hangman-game.png" alt="hangman">
-                    <h3>Fun Hangman Game Built With JavaScript</h3>
+                    <h3>Placeholder</h3>
                     <div class="city-feature">
                         <i class="ion-social-github icon-small"></i>
-                        <a href="https://github.com/kbefff/Hangman">Hangman</a>
+                        <a href="https://github.com/kbefff/Hangman">Placeholder</a>
                     </div>
                 </div>
                 <div class="col span-1-of-4 box">
                     <img src="resources/img/crystal-game.png" alt="crystal" id="crystal-icon">
-                    <h3>Dynamic use of jQuery to Build Crystal Game</h3>
+                    <h3>Placeholder</h3>
                     <div class="city-feature">
                         <i class="ion-social-github icon-small"></i>
-                        <a href="https://github.com/kbefff/Crystal-Game">Crystal Game</a>
+                        <a href="https://github.com/kbefff/Crystal-Game">Placeholder</a>
                     </div>
                 </div>
                 <div class="col span-1-of-4 box">
                     <img src="resources/img/riverdale-trivia-game.png" alt="riverdale-landing-page">
-                    <h3>Trivia App Based on the Popular Television Show Riverdale</h3>
+                    <h3>Placeholder</h3>
                     <div class="city-feature">
                         <i class="ion-social-github icon-small"></i>
-                        <a href="https://github.com/kbefff/Riverdale_Trivia_Game">Riverdale Trivia Game</a>
+                        <a href="https://github.com/kbefff/Riverdale_Trivia_Game">Placeholder</a>
                     </div>
                 </div>
             </div>
