more placeholder work

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                     <h3>Placeholder</h3>
                     <div class="city-feature">
                         <i class="ion-social-github icon-small"></i>
-                        <a href="https://github.com/kbefff/HopOn">Placeholder</a>
+                        <a href="">Placeholder</a>
                     </div>
                 </div>
                 <div class="col span-1-of-4 box">
