--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 
         <section class="section-testimonials">
             <div class="row">
-                <h2>More Projects</h2>
+                <!-- <h2>More Projects</h2> -->
             </div>
             <div class="row js--wp-3">
                 <div class="col span-1-of-4 box">
